@@ -1,3 +1,10 @@
+2008-07-09  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet.c
+		- (applet_get_default_active_connection): return a non-default connection
+			if there is no default connection; fixes issue displaying the not-
+			connected icon if a shared or autoip connection is active
+
 2008-07-08  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/page-wireless.c
